Add models and connect to DB.
