# models/buy_wager_request.go
@@ -1,0 +1,15 @@
+/*
+ * Wager service APIs
+ *
+ * APIs for a wager system
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package models
+
+type BuyWagerRequest struct {
+
+	BuyingPrice float32 `json:"buying_price" binding:"required"`
+}
