# models/error.go
@@ -7,9 +7,9 @@
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
-package wager
+package models
 
-type BuyWageRequest struct {
+type Error struct {
 
-	BuyingPrice float32 `json:"buying_price,omitempty"`
+	Error string `json:"error"`
 }
