# models/wager.go
@@ -1,0 +1,31 @@
+/*
+ * Wager service APIs
+ *
+ * APIs for a wager system
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package models
+
+type Wager struct {
+
+	Id int64 `orm:"auto" json:"id"`
+
+	TotalWagerValue int32 `json:"total_wager_value"`
+
+	Odds int32 `json:"odds"`
+
+	SellingPercentage int32 `json:"selling_percentage"`
+
+	SellingPrice float32 `json:"selling_price,omitempty"`
+
+	CurrentSellingPrice float32 `json:"current_selling_price,omitempty"`
+
+	PercentageSold int32 `orm:"null" json:"percentage_sold,omitempty"`
+
+	AmountSold float64 `orm:"null" json:"amount_sold,omitempty"`
+
+	PlacedAt int64 `json:"placed_at,omitempty"`
+}
