# server/api/openapi.yaml
@@ -29,7 +29,7 @@ paths:
         schema:
           type: string
       responses:
-        200:
+        "200":
           content:
             application/json:
               schema:
@@ -37,6 +37,12 @@ paths:
                   $ref: '#/components/schemas/Wager'
                 type: array
           description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: error
       tags:
       - Wager
     post:
@@ -46,16 +52,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateWageRequest'
+              $ref: '#/components/schemas/CreateWagerRequest'
         description: body for sending message
         required: true
       responses:
-        201:
+        "201":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Wager'
           description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: error
       tags:
       - Wager
       x-codegen-request-body-name: body
@@ -73,24 +85,30 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/BuyWageRequest'
+              $ref: '#/components/schemas/BuyWagerRequest'
         description: body for sending message
         required: true
       responses:
-        200:
+        "201":
           content:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/WagePurchase'
+                  $ref: '#/components/schemas/WagerPurchase'
                 type: array
           description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: error
       tags:
       - Wager
       x-codegen-request-body-name: body
 components:
   schemas:
-    CreateWageRequest:
+    CreateWagerRequest:
       example:
         selling_price: 5.962134
         total_wager_value: 0
@@ -108,6 +126,11 @@ components:
         selling_price:
           format: float
           type: number
+      required:
+      - odds
+      - selling_percentage
+      - selling_price
+      - total_wager_value
       type: object
     Wager:
       example:
@@ -146,16 +169,28 @@ components:
         placed_at:
           format: int64
           type: integer
+      required:
+      - amount_sold
+      - current_selling_price
+      - id
+      - odds
+      - percentage_sold
+      - placed_at
+      - selling_percentage
+      - selling_price
+      - total_wager_value
       type: object
-    BuyWageRequest:
+    BuyWagerRequest:
       example:
         buying_price: 0.8008282
       properties:
         buying_price:
           format: float
           type: number
+      required:
+      - buying_price
       type: object
-    WagePurchase:
+    WagerPurchase:
       example:
         wager_id: 6
         bought_at: 5
@@ -174,4 +209,16 @@ components:
         bought_at:
           format: int64
           type: integer
+      required:
+      - bought_at
+      - buying_price
+      - id
+      - wager_id
+      type: object
+    Error:
+      properties:
+        error:
+          type: string
+      required:
+      - error
       type: object
