# server/go/model_wager_purchase.go
@@ -1,0 +1,21 @@
+/*
+ * Wager service APIs
+ *
+ * APIs for a wager system
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package wager
+
+type WagerPurchase struct {
+
+	Id int64 `json:"id"`
+
+	WagerId int64 `json:"wager_id"`
+
+	BuyingPrice float32 `json:"buying_price"`
+
+	BoughtAt int64 `json:"bought_at"`
+}
